# TheonixOS

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_HISTORY.md  README.md  about.html  changelog.html  community.html  contributors.html  documentation.html  download-start.html  download.html  features.html  final-fix.sh  fix-boot.sh  fix.sh  index.html  netlify.toml  package-lock.json  release-notes.html  repair.sh  roadmap.html  robots.txt  screenshots.html  site.webmanifest  ssh_vm.py  terminal  verify.html  vmterminal.txt
.git-hooks/: pre-commit
.specstory/: .project.json  statistics.json
calamares/: settings.conf
design/: milestones_preview.html
docs/: ARCHITECTURE.md
logs_extracted3/: 0_Rust (thaid).txt  1_Security Audit (thaid).txt  2_Lint Shell Scripts.txt
logs_extracted5/: 0_Rust (thaid).txt  1_Security Audit (thaid).txt  2_Lint Shell Scripts.txt
logs_extracted8/: 0_Security Audit (thaid).txt  1_Lint Shell Scripts.txt  2_Rust (thaid).txt
profile/: packages.x86_64  pacman.conf  profiledef.sh
scripts/: build_in_docker.ps1  build_iso.sh  generate_grub_assets.py  generate_shadow.sh  sign_packages.sh  (+1 more)
thaid/: Cargo.toml
thaid/data/: org.theonix.AI.service  thaid.service
thaid/src/: config.rs  error.rs  lib.rs  main.rs
thaid/src/dbus/: ai_interface.rs  mod.rs
thaid/src/hardware/: mod.rs
thaid/src/memory/: mod.rs
thaid/src/models/: manager.rs  mod.rs
thaid/src/permissions/: mod.rs
thaid/src/services/: container.rs  event_bus.rs  metrics.rs  mod.rs  pipeline.rs
thaid/src/services/agents/: mod.rs
thaid/src/services/context/: mod.rs
thaid/src/services/dbus/: ai_interface.rs
thaid/src/services/memory/: mod.rs  vector.rs
thaid/src/services/models/: manager.rs  mod.rs  prompt_builder.rs  router.rs
thaid/src/services/permissions/: mod.rs
thaid/src/services/planner/: mod.rs
thaid/src/services/tools/: desktop.rs  intent.rs  memory.rs  mod.rs  network.rs  plugin_manager.rs  system.rs  vision.rs
thaid/src/services/voice/: mod.rs  whisper.rs
thaid/src/tools/: automation.rs  context.rs  intent.rs  memory.rs  mod.rs  network.rs  settings.rs  system.rs  vision.rs
thaid/src/voice/: mod.rs  piper.rs  whisper.rs
theonix-wizard/: CMakeLists.txt  org.theonix.Wizard.desktop
theonix-wizard/src/: main.cpp
theonix-wizard/src/qml/: main.qml
(+189 files in other folders)
