[package]
name        = "thaid"
version     = "0.1.0"
edition     = "2021"
description = "Theonix AI Daemon — local AI assistant backend"
authors     = ["Theonix OS Team <dev@theonix.org>"]
license     = "GPL-2.0-only"
repository  = "https://github.com/theonix-os/theonix"
readme      = "README.md"

[lib]
name = "thaid"
path = "src/lib.rs"

[[bin]]
name = "thaid"
path = "src/main.rs"

[dependencies]
# D-Bus integration — async, session & system bus
zbus         = { version = "4", features = ["tokio"] }

# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
tokio-util   = "0.7"
libloading   = "0.8"

# HTTP client for Ollama REST API
reqwest      = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# SQLite for conversation memory
rusqlite     = "0.31"

# Config file parsing (TOML)
toml         = "0.8"

# Structured logging
tracing                = "0.1"
tracing-subscriber     = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-journald       = "0.3"

# Error handling
thiserror = "1"
anyhow    = "1"

# System info (for hardware detection)
sysinfo = "0.30"

# Directories for config and data
dirs = "5.0"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }



[dev-dependencies]
tempfile  = "3"
tokio     = { version = "1", features = ["test-util"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
debug = true
